feat(proper render): one by one event reading

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ MAIN_SERVICE_BASE_URL=http://localhost:3000
 # Minio
 MINIO_TEMPLATES_BUCKET=render-templates
 MINIO_ARTIFACTS_BUCKET=render-artifacts
+MINIO_AUDIO_FILES_BUCKET=audio-files
 MINIO_HOST=localhost
 MINIO_PORT=9000
 MINIO_ACCESS_KEY=root
