--- a/package.json
+++ b/package.json
@@ -9,34 +9,36 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:dev": "nest build -p tsconfig.json",
+    "build:assets": "npx tsc -p ./src/jobs/assets -w",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "pnpm prebuild && nest start --watch",
+    "start:debug": "nest start --debug --watch &&",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "compodoc": "npx @compodoc/compodoc -p tsconfig.json -s"
   },
   "dependencies": {
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.4.2",
-    "@nestjs/config": "^2.3.2",
-    "@nestjs/core": "^9.4.2",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^2.3.4",
+    "@nestjs/core": "^9.4.3",
     "@nestjs/mapped-types": "^1.2.2",
-    "@nestjs/microservices": "^9.4.2",
-    "@nestjs/platform-express": "^9.4.2",
+    "@nestjs/microservices": "^9.4.3",
+    "@nestjs/platform-express": "^9.4.3",
     "@nestjs/typeorm": "^9.0.1",
     "@nexrender/action-copy": "^1.38.0",
-    "@nexrender/action-encode": "^1.42.2",
-    "@nexrender/core": "^1.43.3",
-    "@nexrender/worker": "^1.43.3",
+    "@nexrender/action-encode": "^1.44.0",
+    "@nexrender/core": "^1.44.1",
     "@ntegral/nestjs-sentry": "^4.0.0",
     "@sendgrid/mail": "^7.7.0",
-    "@sentry/node": "^7.54.0",
+    "@sentry/node": "^7.55.2",
+    "adm-zip": "^0.5.10",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "chalk": "^4.1.2",
@@ -50,7 +52,7 @@
     "jsonwebtoken": "^9.0.0",
     "kafkajs": "^2.2.4",
     "minio": "^7.1.1",
-    "nestjs-pino": "^3.2.0",
+    "nestjs-pino": "^3.3.0",
     "otplib": "^12.0.1",
     "pg": "^8.11.0",
     "pino": "^8.14.1",
@@ -63,23 +65,26 @@
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.21",
     "@nestjs/cli": "^9.5.0",
     "@nestjs/schematics": "^9.2.0",
-    "@nestjs/testing": "^9.4.2",
-    "@nexrender/types": "^1.43.1",
+    "@nestjs/testing": "^9.4.3",
+    "@nexrender/types": "^1.44.1",
+    "@types/adm-zip": "^0.5.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.18.34",
+    "@types/node": "^16.18.36",
     "@types/pg": "^8.10.2",
     "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^8.42.0",
+    "cpy-cli": "^4.2.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
@@ -90,6 +95,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
+    "types-for-adobe": "^7.0.12",
     "typescript": "^4.9.5"
   }
 }
