--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ CLIENT_BASE_URL=http://localhost:9999
 
 # Microservices
 MAIN_SERVICE_BASE_URL=http://localhost:3000
+RENDER_SERVICE_BASE_URL=http://localhost:3002
 
 # Minio
 MINIO_TEMPLATES_BUCKET=render-templates
@@ -30,3 +31,6 @@ SENTRY_DEBUG=true
 
 # kafka
 KAFKA_BROKERS=localhost:29092
+
+# nexrender
+NEXRENDER_ENABLE_AELOG_PROJECT_FOLDER=true
